# Clara-Security

./: .gitignore  DESIGN_SPEC.md  README.md
android_app/: ANDROID_STUDIO_SETUP.md  README.md  gradle.properties  settings.gradle.kts
android_app/app/: build.gradle.kts  proguard-rules.pro
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/java/com/clara/security/: MainActivity.kt
android_app/app/src/main/java/com/clara/security/ai/: ClaraAI.kt
android_app/app/src/main/java/com/clara/security/data/: ClaraConnection.kt  ClaraProtocol.kt  RootExecutor.kt  SystemDataProvider.kt  ThreatDatabase.kt
android_app/app/src/main/java/com/clara/security/model/: Models.kt
android_app/app/src/main/java/com/clara/security/receiver/: BootReceiver.kt  SmsReceiver.kt
android_app/app/src/main/java/com/clara/security/security/: AntiTheftManager.kt  OverlayLockService.kt  SecurityPreferences.kt  VoicePrintAuth.kt
android_app/app/src/main/java/com/clara/security/service/: ClaraConnectionService.kt  NotificationHelper.kt  NotificationService.kt
android_app/app/src/main/java/com/clara/security/ui/: CLARAApp.kt
android_app/app/src/main/java/com/clara/security/ui/screens/: AppLockScreen.kt  DashboardScreen.kt  FirewallScreen.kt  ProtectionScreen.kt  SettingsScreen.kt  StatisticsScreen.kt  ThreatsScreen.kt  TrackerScreen.kt  TrustEngineScreen.kt  VpnScreen.kt  WifiAuditScreen.kt
android_app/app/src/main/java/com/clara/security/ui/theme/: Theme.kt  Type.kt
android_app/app/src/main/java/com/clara/security/vpn/: WireGuardConfigParser.kt
android_app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
daemon/: CMakeLists.txt  config.json
daemon/app_manager/include/: app_lock.h  root_hider.h
daemon/app_manager/src/: app_lock.cpp  main.cpp  root_hider.cpp
daemon/build_android/: CMakeCache.txt  Makefile  clara_app_manager  clara_cli  clara_orchestrator  cmake_install.cmake
daemon/include/: ai_engine.h  clara_daemon.h  file_monitor.h  network_monitor.h  sms_monitor.h
daemon/orchestrator/include/: orchestrator.h
daemon/orchestrator/src/: main.cpp  orchestrator.cpp
daemon/privacy_core/include/: network_firewall.h  permission_watcher.h  tracker_blocker.h
daemon/privacy_core/src/: main.cpp  network_firewall.cpp  permission_watcher.cpp  tracker_blocker.cpp
daemon/security_core/include/: clipboard_guard.h  keylogger_detector.h  messenger_monitor.h  overlay_detector.h  screen_capture_detector.h  wifi_auditor.h
daemon/security_core/src/: clipboard_guard.cpp  keylogger_detector.cpp  main.cpp  messenger_monitor.cpp  overlay_detector.cpp  screen_capture_detector.cpp  wifi_auditor.cpp
daemon/src/: ai_engine.cpp  clara_daemon.cpp  file_monitor.cpp  main.cpp  network_monitor.cpp  sms_monitor.cpp
daemon/tools/cli/: main.cpp
daemon/trust_engine/include/: trust_engine.h
daemon/trust_engine/src/: trust_engine.cpp
kernelsu_module/: module.prop  post-fs-data.sh  service.sh  uninstall.sh
module/: module.prop  post-fs-data.sh  sepolicy.rule  service.sh
scripts/: build_android.sh  package_module.sh
tests/: integration_tests.cpp  run_tests
tools/: extract_platform_cert.sh
